# etlhelper

./: .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  copy_samples.py  copy_samples_async.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: gh-pages.yml  lint_and_test.yml  main.yml  test.yml
.gitlab/issue_templates/: Basic_Issue.md
docs/: Makefile  about.rst  api.rst  conf.py  connecting_to_databases.rst  demo_copy.py  demo_error.py  demo_load.py  demo_namedtuple.py  demo_on_conflict.py  etl_functions.rst  etlhelper.rst  index.rst  index_original.rst~  installation.rst  modules.rst  overview.rst  recipes.rst  utilities.rst
docs/code_demos/connecting_to_databases/: db_params.py  oracle_env.py  oracle_lobs.py  standalone_connect.py
docs/code_demos/copy/: demo_copy_full.py  demo_copy_iter_rows.py  demo_copy_rows.py  demo_copy_table_rows.py
docs/code_demos/error_handling/: demo_log_error.py  demo_sql_conflict_error.py
docs/code_demos/extract/: demo_fetch.py  demo_iter.py  demo_row_factory.py
docs/code_demos/load/: demo_executemany_named.py  demo_executemany_positional.py  demo_load_full.py  demo_load_min.py
docs/code_demos/recipes/: apache_airflow_integration.py  csv_files.py  csv_files_pandas.py  database_to_api.py  database_to_database.py
docs/code_demos/transform/: demo_return.py  demo_yield.py
docs/code_demos/utilities/: enable_logger.py  return_autogenerated.py  table_info.py  use_logger.py
docs/etl_functions/: copy.rst  demo_named_tuple.py  error_handling.rst  extract.rst  load.rst  transform.rst
docs/recipes/: apache_airflow_integration.rst  csv_files.rst  database_to_api.rst  database_to_database.rst  spatial_etl.rst
docs/source/: index.rst
etlhelper/: __init__.py  _version.py  abort.py  connect.py  database.py  db_helper_factory.py  db_params.py  etl.py  exceptions.py  row_factories.py  setup_mssql_server_driver.py  setup_oracle_client.py  setup_sql_server_driver.py  types.py  utils.py
etlhelper/db_helpers/: __init__.py  db_helper.py  informix.py  mssql.py  mysql.py  oracle.py  postgres.py  sqlite.py
test/: Dockerfile.test_shells  conftest.py  type_issues.py
test/integration/: test_dbparams.py  test_setup_oracle_client.py  test_utils.py
test/integration/db/: test_mssql.py  test_oracle.py  test_sqlite.py
test/integration/etl/: test_abort.py  test_etl_extract.py  test_etl_load.py  test_etl_logging.py  test_etl_transform.py
test/unit/: test_db_helpers.py  test_db_params.py  test_etl.py  test_helper_factory.py  test_row_factory.py  test_setup_oracle_client.py
